# kindle-events-parser

./: .gitmodules  README.md
kindle-events-parser/: Cargo.toml  Makefile
kindle-events-parser/.cargo/: config.toml
kindle-events-parser/src/: main.rs
libopenlipc-sys/: Cargo.toml  README.md  build.rs
libopenlipc-sys/.cargo/: config.toml
libopenlipc-sys/src/: bindings.rs  lib.rs  main.rs
mqtt-simple/: Cargo.toml  README.md
mqtt-simple/src/: lib.rs  main.rs
