[package]
name = "libopenlipc-sys"
version = "0.1.2"
authors = ["david"]
edition = "2018"
description = "Wrapper around liblipc to interact with Kindle dbus-based LIPC events"
license = "LGPL-3.0"
repository = "https://github.com/DavidVentura/kindle-events-parser/tree/master/libopenlipc-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_primitive = "0.1.1"

[package.metadata.docs.rs]
default-target = "armv7-unknown-linux-gnueabi"
